--- a/I2C_OLED.ioc
+++ b/I2C_OLED.ioc
@@ -2,16 +2,31 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.I2C1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C1_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.I2C1_TX.0.Instance=DMA1_Stream1
+Dma.I2C1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C1_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.I2C1_TX.0.Mode=DMA_NORMAL
+Dma.I2C1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C1_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C1_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.I2C1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=I2C1_TX
+Dma.RequestsNb=1
 File.Version=6
+I2C1.I2C_Mode=I2C_Fast
+I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F411RET6
 Mcu.Family=STM32F4
-Mcu.IP0=I2C1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP0=DMA
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -35,9 +50,11 @@ Mcu.UserName=STM32F411RETx
 MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:true\:true\:2\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -129,7 +146,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
